add bottom acrive

--- a/host/maind/main.css
+++ b/host/maind/main.css
@@ -46,6 +46,12 @@ body {
     background-color: #f5f5f5;
     color: #333;
   }
+
+  button:active {
+    transform: translate(0.2px);
+    border-bottom:none;
+    background-color: gray;
+  }
   
   ul {
     list-style-type: none;
